; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtlwifi/rtl8192cu/extr_hw.c__rtl92cu_init_chipn_three_out_ep_priority.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtlwifi/rtl8192cu/extr_hw.c__rtl92cu_init_chipn_three_out_ep_priority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_hw = type { i32 }

@QUEUE_LOW = common dso_local global i32 0, align 4
@QUEUE_NORMAL = common dso_local global i32 0, align 4
@QUEUE_HIGH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Tx queue select :0x%02x..\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211_hw*, i32, i32)* @_rtl92cu_init_chipn_three_out_ep_priority to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_rtl92cu_init_chipn_three_out_ep_priority(%struct.ieee80211_hw* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ieee80211_hw*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.ieee80211_hw* %0, %struct.ieee80211_hw** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %22, label %15

15:                                               ; preds = %3
  %16 = load i32, i32* @QUEUE_LOW, align 4
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* @QUEUE_LOW, align 4
  store i32 %17, i32* %8, align 4
  %18 = load i32, i32* @QUEUE_NORMAL, align 4
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* @QUEUE_HIGH, align 4
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* @QUEUE_HIGH, align 4
  store i32 %20, i32* %11, align 4
  %21 = load i32, i32* @QUEUE_HIGH, align 4
  store i32 %21, i32* %12, align 4
  br label %29

22:                                               ; preds = %3
  %23 = load i32, i32* @QUEUE_LOW, align 4
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* @QUEUE_NORMAL, align 4
  store i32 %24, i32* %8, align 4
  %25 = load i32, i32* @QUEUE_NORMAL, align 4
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* @QUEUE_HIGH, align 4
  store i32 %26, i32* %10, align 4
  %27 = load i32, i32* @QUEUE_HIGH, align 4
  store i32 %27, i32* %11, align 4
  %28 = load i32, i32* @QUEUE_HIGH, align 4
  store i32 %28, i32* %12, align 4
  br label %29

29:                                               ; preds = %22, %15
  %30 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %4, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %10, align 4
  %35 = load i32, i32* %11, align 4
  %36 = load i32, i32* %12, align 4
  %37 = call i32 @_rtl92c_init_chipn_reg_priority(%struct.ieee80211_hw* %30, i32 %31, i32 %32, i32 %33, i32 %34, i32 %35, i32 %36)
  %38 = load i32, i32* %6, align 4
  %39 = call i32 @pr_info(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %38)
  ret void
}

declare dso_local i32 @_rtl92c_init_chipn_reg_priority(%struct.ieee80211_hw*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @pr_info(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
